--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".PostDetails"></activity>
+        <activity android:name=".PostDetails" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
